# FPLX

./: .env  .gitignore  Cargo.toml
.sqlx/: query-967918ba25df6414ccb48327afce7ffd6de22be878372efeda5da4fad89dc33f.json
migrations/: 20260131190253_init_schema.sql
src/: main.rs
src/controllers/: auth_controller.rs  fantasy_league_controller.rs  fantasy_team_controllers.rs  offcial_fpl_controllers.rs  team_controllers.rs
src/datamodels/: api_response.rs  auth_models.rs  fantasy_league_data_model.rs  fantasy_team_data_models.rs  mod.rs  official_fpl_models.rs
src/helpers/: auth_middleware.rs  db.rs  fantasy_league_helper.rs  http_client.rs  response_helper.rs
src/models/: auth_model.rs  fantasy_league_model.rs  fantasy_team_model.rs  official_fpl_sync_model.rs  team_model.rs
src/routes/: sync_routes.rs
