[package]
name = "FPLX"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid"
]}

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenvy = "0.15"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

tracing = "0.1"
anyhow = "1"
tracing-subscriber = "0.3"
ed25519-dalek = "2"
base64 = "0.22"
jsonwebtoken = "9"
rand = "0.8"
bs58 = "0.5"